<resources>
    <string name="app_name">WisataKarawang</string>
    <string name="tourist_sites_name">Tempat Wisata</string>
    <string name="detail">Detail</string>
    <string name="main_page">Halaman Utama</string>
    <string name="about">Tentang</string>
    <string name="favorite">Favorite</string>
    <string name="share">Bagikan Lokasi</string>
    <string name="profile_name">Sekar Madu Kusumawardani</string>
    <string name="email">sekarmadu99@gmail.com</string>
    <string name="profile_education">Ilmu Komputer | Universitas Pendidikan Indonesia</string>
    <string name="ticket_price">Tiket Masuk</string>
    <string name="address">Alamat</string>
</resources>