<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/sekar" />

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="125dp"
            android:text="@string/profile_name"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="145dp"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/tv_profile_education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_education"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dp"
            android:textSize="14sp"/>

    </RelativeLayout>

</LinearLayout>