<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_sites_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_centerHorizontal="true"
                android:textSize="22sp"
                android:textColor="@color/gray"
                android:fontFamily="casual"
                android:text="Nama Tempat"/>

            <ImageView
                android:id="@+id/sites_photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="72dp"
                android:layout_marginBottom="40dp"
                android:adjustViewBounds="true"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                tools:src="@tools:sample/avatars"/>

        </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/tv_ticket"
                    style="@style/TextContent"
                    android:text="@string/ticket_price" />

                <TextView
                    android:id="@+id/tv_ticket_value"
                    style="@style/TextContentValue"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/tv_address"
                    style="@style/TextContent"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/tv_address_value"
                    style="@style/TextContentValue"
                    android:text="" />

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/tv_detail_sites"
            style="@style/TextContent"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text=""/>

        <Button
            android:id="@+id/btn_share_location"
            android:text="@string/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"/>

    </LinearLayout>

</ScrollView>